query number fixed

--- a/famBus.html
+++ b/famBus.html
@@ -7483,12 +7483,15 @@ a.anchor-link {
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput celltag_parameters" data-mime-type="text/markdown">
 <div style="text-align:center">
-<img alt="Alt text" src="Spotify_I.png" title="a title" width="100px"/>
+<img alt="Spotify" src="Spotify_I.png" width="100px"/>
 </div>
 <div style="text-align:center">
-<img alt="Alt text" src="spotify_t.png" title="a title" width="400px"/>
+<img alt="Spotify" src="spotify_t.png" width="400px"/>
 </div>
+<br/>
+<h2 style="font-weight: 500;line-height:0.3">About Dataset</h2>
 <p align="justify" style="font-size:16px;line-height:1.3;">This dataset contains a comprehensive list of the most famous songs of 2023 as listed on Spotify. The dataset offers a wealth of features beyond what is typically available in similar datasets. It provides insights into each song's attributes, popularity, and presence on various music platforms. The dataset includes information such as track name, artist(s) name, release date, Spotify playlists and charts, streaming statistics, Apple Music presence, Deezer presence, Shazam charts, and various audio features.</p>
+<br/>
 <table align="center">
 <thead>
 <tr style="background-color: #1DB954; font-size: 16px; text-align:center;">
@@ -7595,6 +7598,49 @@ a.anchor-link {
 </tr>
 </tbody>
 </table>
+<br/>
+<h2 style="font-weight: 500;line-height:0.3">Objective/Aim</h2>
+<ul style="line-height:150%;font-size:16px;list-style-type:square;">
+<li>Content Analysis
+<li>Playlist Popularity Analysis
+<li>Chart Performance Analysis
+<li>Genre and Mood Analysis
+<li>User Engagement Trends
+<li>Recommendation System Insights
+</li></li></li></li></li></li></ul>
+<br/>
+<h2 style="font-weight: 500;line-height:0.3">Team Members</h2>
+<div style="display: flex; flex-wrap: wrap; justify-content: space-around;">
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954;">Noora Hussain</h3>
+<p style="line-height: 0;">Roll No: 3402</p>
+</div>
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954;">Arun Krishna</h3>
+<p style="line-height: 0;">Roll No: 3406</p>
+</div>
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954;">Muhammed Efas</h3>
+<p style="line-height: 0;">Roll No: 3411</p>
+</div>
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954">Shyam Kiran</h3>
+<p style="line-height: 0;">Roll No: 3414</p>
+</div>
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954;">Ashwin Venugopal</h3>
+<p style="line-height: 0;">Roll No: 3424</p>
+</div>
+<div style="width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;">
+<h3 style="font-weight: 500; line-height: 1.2;color:#1DB954;">Aasim Abdul Majeed</h3>
+<p style="line-height: 0;">Roll No: 3488</p>
+</div>
+</div>
+<h2 style="font-weight: 500;line-height:0.3">Source of Data</h2>
+<div style="margin-left:40px">
+<a href="https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023"> <img alt="Kaggle" src="kaggle.png" width="100px"/></a>
+</div>
+<br/>
 </div>
 </div>
 </div>
@@ -7605,7 +7651,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<center><h3><strong>Importing the Necessary Library</strong></h3></center>
+<center><h2><strong>Importing the Necessary Library</strong></h2></center>
 </div>
 </div>
 </div>
@@ -7634,7 +7680,7 @@ a.anchor-link {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<center><h3><strong>Loading the Data</strong></h3></center>
+<center><h2><strong>Loading the Data</strong></h2></center>
 </div>
 </div>
 </div>
@@ -14632,7 +14678,7 @@ Smells Like Teen Spirit - Remastered 2021                12367
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput" data-mime-type="text/markdown">
-<h5><strong>Query 14: Count of the occurrences of each key in the 'key' column of the DataFrame</strong></h5>
+<h5><strong>Query 15: Count of the occurrences of each key in the 'key' column of the DataFrame</strong></h5>
 </div>
 </div>
 </div>
